--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="background">
-        <img src="/pattern-background-desktop.svg">
+        <img src="pattern-background-desktop.svg">
     </div>
     <div class="container">
         <img class="iconMusic" src="illustration-hero.svg">
@@ -30,7 +30,7 @@
 
                 <!-- <img src="/icon-music.svg"> -->
                 <div class="logo">
-                    <img src="/icon-music.svg">
+                    <img src="icon-music.svg">
                     <div class="dollar">
                         <h3>
                             Annual Plan
